frontend/src/index.css
@import "tailwindcss";

html {
  background-color: #020617;
}

body {
  zoom: 85%;
  background-color: #020617;
  color: #f8fafc;
  min-height: 100vh;
}

/* Custom Scrollbar Styles */
.custom-scrollbar::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: transparent;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.15);
  border-radius: 10px;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: rgba(255, 255, 255, 0.3);
}

/* Hide scrollbar utility */
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}
.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

@keyframes scan {
  0% { top: 0%; }
  100% { top: 100%; }
}

.animate-scan {
  animation: scan 2s linear infinite;
}

